[REFACTOR] : Update debug statistics : more accurate and more extensible
[REFACTOR] : Session management and users authentification are completely refactored to use Zend Framework
[REFACTOR] : Add support for hidden fields in polymod am-form
[REFACTOR] : Add filter by dates on activity logs
[REFACTOR] : Update page codename to allow codenames of 100 characters
[REFACTOR] : Add thumbnail to field google coordinates in modules admin
[REFACTOR] : Refactor tag atm-xml to be used in rows and in page templates
[REFACTOR] : Images and files inserted into polymod fields now use correct website domain instead of main website domain
[REFACTOR] : Add title and company to users details
[REFACTOR] : Add log for user logout
[REFACTOR] : Add previous login message on connection
[REFACTOR] : Use a temporary table to store poly objects search ids to avoid MySQL limitations
[REFACTOR] : Completely refactor cms_aliases module for a better integration in Automne 4
[REFACTOR] : Refactor single sub objects administration to allow creation and modification
[REFACTOR] : Refactor JS and CSS editor to add robots.txt edition
[REFACTOR] : Refactor multi categories field in polymod administration using tree UI.
[REFACTOR] : Update phpMyAdmin to version 3.4.3.1
[REFACTOR] : Add less files edition in stylesheet files edition
[REFACTOR] : Replace multiselect ExtJS extension by superselect for better ergonomics
[REFACTOR] : Allow page tree to be opened in a new window
[FEATURE] : Add oembed object and oembed polymod field (external media field). Update Mediacenter to manage oembed medias
[FEATURE] : Add parent page selection on new page creation
[FEATURE] : Add variable type {page:father:XXX} to get infos from current parent page
[FEATURE] : Add protection for pages and categories to avoid changing important datas inadvertently
[FEATURE] : Add {server:XXX:YYY} variable type
[FEATURE] : Add atm-header tag to create content to be executed before page content