@@ -1011,6 +1011,8 @@ define("CLEARANCE_ADMINISTRATION_EDITUSERS", 32);
 define("CLEARANCE_ADMINISTRATION_VIEWCALENDAR", 64);
 define("CLEARANCE_ADMINISTRATION_STATS", 128);
 define("CLEARANCE_ADMINISTRATION_DUPLICATE_BRANCH", 256);
+define("CLEARANCE_ADMINISTRATION_PAGE_CODENAMES", 512);
+
 /**
 * Alert Levels
 */
