@@ -11,6 +11,7 @@ V4.2.0 (in progress)
 [REFACTOR] : Add support for hidden fields in polymod am-form
 [REFACTOR] : Add filter by dates on activity logs
 [REFACTOR] : Update page codename to allow codenames of 100 characters
+[REFACTOR] : Add an administration right to allow update of pages codenames without a right on pages/rows templates
 [REFACTOR] : Add thumbnail to field google coordinates in modules admin
 [REFACTOR] : Refactor tag atm-xml to be used in rows and in page templates
 [REFACTOR] : Images and files inserted into polymod fields now use correct website domain instead of main website domain
